# voz

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/events/: channel_delete.rs  channel_update.rs  guild_create.rs  guild_delete.rs  guild_update.rs  interaction_create.rs  member_remove.rs  mod.rs  ready.rs  role_delete.rs  unavailable_guild.rs  voice_state_update.rs
src/interactions/commands/: mod.rs
src/interactions/commands/join/: access_role.rs  category.rs  create.rs  mod.rs  name.rs  permanence.rs  privacy.rs  remove.rs  view.rs
src/interactions/commands/voice/: allow_member.rs  bitrate.rs  claim.rs  delete.rs  deny_member.rs  mod.rs  name.rs  permanence.rs  privacy.rs  remove_member.rs  slow_mode.rs  transfer.rs  user_limit.rs  video_quality_mode.rs  view.rs  voice_region.rs
src/structs/: cache.rs  context.rs  database.rs  interaction.rs  mod.rs
src/utilities/: constants.rs  mod.rs  time.rs
